# C-String-Format

./: CMakeLists.txt  README.md
test/: test.cpp
utils/: LICENSE.txt  format.cpp  format.h
